--- a/mvn_spring_boot_demo/pom.xml
+++ b/mvn_spring_boot_demo/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-
+        <!--自动生成get set方法插件-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
 
