--- a/mvn_spring_boot_demo/pom.xml
+++ b/mvn_spring_boot_demo/pom.xml
@@ -29,13 +29,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--jdbc启动器-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
+        <!--连接池 -->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
+        <!--</dependency>-->
 
-        <!--连接池-->
+        <!--连接池 spring 默认支持了HikariCP-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
@@ -54,6 +54,26 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--mybatis 启动器-->
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.spring.boot</groupId>-->
+            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
+            <!--<version>1.3.2</version>-->
+        <!--</dependency>-->
+
+        <!--通用mapper-->
+        <!--引入通用mapper后 就不需要引mybatis、jdbc-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+        <!--test 启动器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
